--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -125,6 +125,7 @@
   <div class="nav-buttons">
     <a href="/">🏠 Home</a>
     <a href="/add_restaurant">➕ Add Restaurant</a>
+    <a href="/add_review">Add Review</a>
     <a href="/logout">Log Out</a>
   </div>
 
