--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -103,8 +103,10 @@
 
     <div class="nav-buttons">
       <a href="/">🏠 Home</a>
+      <a href="/restaurant">🍽️ View Restaurants</a>
+      <a href="/dishes">🍕 View Dishes</a>
       <a href="/add_restaurant">➕ Add Restaurant</a>
-      <a href="/restaurant">View Restaurants</a>
+      <a href="/add_review">✍️ Add Review</a>
       <a href="/logout">Log Out</a>
     </div>
 
