--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,9 @@
   <div class="nav-buttons">
     <a href="/">🏠 Home</a>
     <a href="/restaurant">🍽️ View Restaurants</a>
+    <a href="/dishes">🍕 View Dishes</a>
     <a href="/add_restaurant">➕ Add Restaurant</a>
+    <a href="/add_dish">🍲 Add Dish</a>
     <a href="/add_review">✍️ Add Review</a>
     <a href="/logout">🚪 Log Out</a>
   </div>
